[gd_scene load_steps=30 format=3 uid="uid://c8dlajk0at8no"]

[ext_resource type="Theme" uid="uid://bm1rvmngc833v" path="res://assets/themes/theme.tres" id="1_0pkvk"]
[ext_resource type="Script" path="res://src/ui/components/backpack/backpack.gd" id="1_a5ql5"]
[ext_resource type="Texture2D" uid="uid://b5sb3odhk0ews" path="res://assets/ui/Background.jpeg" id="2_q2lt3"]
[ext_resource type="PackedScene" uid="uid://wuyfsip50bwb" path="res://src/ui/components/wearable_button/wearable_button.tscn" id="3_ih1sc"]
[ext_resource type="PackedScene" uid="uid://cy43hvd5bivso" path="res://src/ui/components/backpack/avatar_preview.tscn" id="4_4kxkq"]
[ext_resource type="Texture2D" uid="uid://dra4ek5p0o6jj" path="res://assets/ui/wearable_categories/body_shape-icon.svg" id="6_4rdaw"]
[ext_resource type="Shader" path="res://src/ui/components/backpack/backpack.gdshader" id="6_qle00"]
[ext_resource type="Theme" uid="uid://chwr8vock83p4" path="res://assets/themes/dark_dcl_theme/dark_dcl_theme.tres" id="6_t442b"]
[ext_resource type="Texture2D" uid="uid://bg68xlkrhus8m" path="res://assets/ui/wearable_categories/eyebrows-icon.svg" id="7_a6yyg"]
[ext_resource type="PackedScene" uid="uid://cyf8k77w3gdih" path="res://src/ui/color_picker/color_picker_button.tscn" id="7_i1fkq"]
[ext_resource type="Texture2D" uid="uid://dp2sc2kkjq5wk" path="res://assets/ui/wearable_categories/eyes-icon.svg" id="8_416cn"]
[ext_resource type="Texture2D" uid="uid://ontpvrldbxsu" path="res://assets/ui/wearable_categories/mouth-icon.svg" id="9_rk0en"]
[ext_resource type="PackedScene" uid="uid://djuo7hndjhpas" path="res://src/ui/color_picker/color_picker_panel.tscn" id="10_8s7x3"]
[ext_resource type="Texture2D" uid="uid://di5oa3ptamiwb" path="res://assets/ui/wearable_categories/hat-icon.svg" id="10_xqo47"]
[ext_resource type="Texture2D" uid="uid://053ddululomg" path="res://assets/ui/wearable_categories/earring-icon.svg" id="11_2suar"]
[ext_resource type="Texture2D" uid="uid://drvff1woeabw3" path="res://assets/ui/wearable_categories/facial_hair-icon.svg" id="11_hbc6s"]
[ext_resource type="Texture2D" uid="uid://bygnpeber2qmc" path="res://assets/ui/wearable_categories/mask-icon.svg" id="12_6hl8c"]
[ext_resource type="Texture2D" uid="uid://b0rnagailiooj" path="res://assets/ui/wearable_categories/upper_body-icon.svg" id="12_6wpew"]
[ext_resource type="Texture2D" uid="uid://csqvfrfl3wkf" path="res://assets/ui/wearable_categories/hands_wear-icon.svg" id="13_1prjt"]
[ext_resource type="Texture2D" uid="uid://dnma2mndpeupv" path="res://assets/ui/wearable_categories/tiara-icon.svg" id="13_jd3w1"]
[ext_resource type="Texture2D" uid="uid://bn6wp7yfox0cu" path="res://assets/ui/wearable_categories/lower_body-icon.svg" id="14_5xqio"]
[ext_resource type="Texture2D" uid="uid://csxpe7al0f1ql" path="res://assets/ui/wearable_categories/helmet-icon.svg" id="14_nbor4"]
[ext_resource type="Texture2D" uid="uid://bavm4qx6mvfcs" path="res://assets/ui/wearable_categories/feet-icon.svg" id="15_147vw"]
[ext_resource type="Texture2D" uid="uid://du26rhhe8qfin" path="res://assets/ui/wearable_categories/eyewear-icon.svg" id="17_073bg"]
[ext_resource type="Texture2D" uid="uid://8mwi1tvyxm5f" path="res://assets/ui/wearable_categories/top_head-icon.svg" id="21_rmg80"]
[ext_resource type="Texture2D" uid="uid://bmoy7cmuucooq" path="res://assets/ui/wearable_categories/skin-icon.svg" id="25_cd16j"]

[sub_resource type="ButtonGroup" id="ButtonGroup_0kgen"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6ygo4"]
shader = ExtResource("6_qle00")
shader_parameter/power = 0.2
shader_parameter/up = 0.0
shader_parameter/down = 0.0
shader_parameter/left = 0.0
shader_parameter/right = 0.3
shader_parameter/up_clip = 0.0
shader_parameter/down_clip = 0.0
shader_parameter/left_clip = 0.0
shader_parameter/right_clip = 0.0

[sub_resource type="ButtonGroup" id="ButtonGroup_meiko"]
resource_local_to_scene = false

[node name="Backpack" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("2_q2lt3")
expand_mode = 1
script = ExtResource("1_a5ql5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Control" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Control"]
layout_mode = 2

[node name="Button_Logout" type="Button" parent="HBoxContainer/Control/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Log out"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 16

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/Control/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 7
alignment = 1

[node name="Button_Avatar" type="Button" parent="HBoxContainer/Control/VBoxContainer/HBoxContainer3/HBoxContainer4"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"OrangeButton"
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_0kgen")
text = "Avatar"

[node name="Button_Emotes" type="Button" parent="HBoxContainer/Control/VBoxContainer/HBoxContainer3/HBoxContainer4"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"OrangeButton"
toggle_mode = true
button_group = SubResource("ButtonGroup_0kgen")
text = "Emotes
"

[node name="AvatarPreview" parent="HBoxContainer/Control/VBoxContainer" instance=ExtResource("4_4kxkq")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1

[node name="LineEdit_Name" type="LineEdit" parent="HBoxContainer/Control/VBoxContainer"]
layout_mode = 2
focus_mode = 1

[node name="Button_SaveProfile" type="Button" parent="HBoxContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
focus_mode = 0
theme_type_variation = &"OrangeButton"
disabled = true
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_0kgen")
text = "Save Profile"

[node name="ColorRect_Sidebar" type="ColorRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.545098, 0.545098, 0.545098, 0.14902)

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ColorRect_Sidebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="GridContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer"]
visible = false
layout_direction = 1
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 4

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_0pkvk")
theme_type_variation = &"BrownCheckButton"
text = "ONLY COLLECTIBLES"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"BrownLabel"
text = "COLLECTION"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_mode = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_type_variation = &"BrownLabel"
text = "SORT BY"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_mode = 1

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search Item"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="ScrollContainer3" type="ScrollContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
material = SubResource("ShaderMaterial_6ygo4")
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer_Category" type="VBoxContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer3/HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer3/HBoxContainer/VBoxContainer_Category"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="MenuButton_Filter" type="OptionButton" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer3/HBoxContainer/VBoxContainer_Category/HBoxContainer"]
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 1
theme = ExtResource("6_t442b")
theme_override_constants/h_separation = 15
theme_override_constants/outline_size = 1
expand_icon = true

[node name="LineEdit_PreviewUrl" type="LineEdit" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer3/HBoxContainer/VBoxContainer_Category/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
theme = ExtResource("6_t442b")
placeholder_text = "Search..."

[node name="ScrollContainer2" type="ScrollContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
material = SubResource("ShaderMaterial_6ygo4")
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer_Category" type="VBoxContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="wearable_button" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "BODY SHAPE"
icon = ExtResource("6_4rdaw")
filter_category = 0

[node name="wearable_button2" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "HAIR"

[node name="wearable_button3" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "EYEBROWS"
icon = ExtResource("7_a6yyg")
filter_category = 2

[node name="wearable_button4" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "EYES"
icon = ExtResource("8_416cn")
filter_category = 3

[node name="wearable_button5" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "MOUTH"
icon = ExtResource("9_rk0en")
filter_category = 4

[node name="wearable_button6" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "FACIAL HAIR"
icon = ExtResource("11_hbc6s")
filter_category = 5

[node name="wearable_button7" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "UPPER BODY"
icon = ExtResource("12_6wpew")
filter_category = 6

[node name="wearable_button8" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "HANDS WEAR"
icon = ExtResource("13_1prjt")
filter_category = 7

[node name="wearable_button9" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "LOWER BODY"
icon = ExtResource("14_5xqio")
filter_category = 8

[node name="wearable_button10" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "FEET"
icon = ExtResource("15_147vw")
filter_category = 9

[node name="wearable_button11" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "HAT"
icon = ExtResource("10_xqo47")
filter_category = 10

[node name="wearable_button12" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "EYEWEAR"
icon = ExtResource("17_073bg")
filter_category = 11

[node name="wearable_button13" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "EARRING"
icon = ExtResource("11_2suar")
filter_category = 12

[node name="wearable_button14" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "MASK"
icon = ExtResource("12_6hl8c")
filter_category = 13

[node name="wearable_button15" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "TIARA"
icon = ExtResource("13_jd3w1")
filter_category = 14

[node name="wearable_button16" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "TOP HEAD"
icon = ExtResource("21_rmg80")
filter_category = 15

[node name="wearable_button17" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "HELMET"
icon = ExtResource("14_nbor4")
filter_category = 16

[node name="wearable_button18" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2/HBoxContainer/VBoxContainer_Category/HBoxContainer" instance=ExtResource("3_ih1sc")]
layout_mode = 2
mouse_filter = 1
button_group = SubResource("ButtonGroup_meiko")
text = "SKIN"
icon = ExtResource("25_cd16j")
filter_category = 17

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(580, 320)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 15

[node name="GridContainer_WearablesList" type="GridContainer" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 6

[node name="Color_Picker_Button" parent="HBoxContainer/ColorRect_Sidebar/MarginContainer" instance=ExtResource("7_i1fkq")]
layout_mode = 2

[node name="Color_Picker_Panel" parent="." instance=ExtResource("10_8s7x3")]
position = Vector2i(100, 0)
visible = false

[connection signal="toggle_color_panel" from="HBoxContainer/ColorRect_Sidebar/MarginContainer/Color_Picker_Button" to="." method="_on_color_picker_button_toggle_color_panel"]
